--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server",
-    "startProd": "NODE_ENV=production node server.js"
+    "startProd": "node server.js"
   },
   "keywords": [],
   "author": "",
